--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
-    "mongoose": "^8.9.1"
+    "mongoose": "^8.9.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
