--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "assign-default-role": "node prisma/customDataMigration/assignDefaultRoles.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "author": "Lam Doan",
   "license": "ISC",
